# fireset

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  env.sample  pyproject.toml  requirements.txt  restart.sh  sample.env
docs/: carddav.md
fireset/: LogPushoverHandler.py  __init__.py  __main__.py  access.py  apache.py  caldav.py  carddav.py  collation.py  davcommon.py  icalendar.py  infit.py  phantom.py  pushover.py  quota.py  scheduling.py  server.py  server_info.py  sync.py  timezones.py  vcard.py  web.py  webdav.py  wsgi.py  wsgi_helpers.py  xmpp.py
fireset/store/: Contact.py  __init__.py  config.py  database.py  db_connection.py  git.py  index.py  vdir.py
fireset/testing/: base.py
src/fireset/: Configuration.py  Contact.py  __init__.py  __main__.py  app.py  authentication.py  compute.py  config.py  database.py  example_ldaptor.py  httputils.py  log.py  pathutils.py  proto.py  server.py  types.py  utils.py  xmlutils.py
src/fireset/app/: __init__.py  base.py  delete.py  get.py  head.py  mkcalendar.py  mkcol.py  move.py  options.py  post.py  propfind.py  proppatch.py  put.py  report.py
src/fireset/auth/: __init__.py  denyall.py  htpasswd.py  http_x_remote_user.py  none.py  remote_user.py
src/fireset/hook/: __init__.py  none.py
src/fireset/hook/rabbitmq/: __init__.py
src/fireset/item/: __init__.py  filter.py
src/fireset/ldap.asn1/: mycodec.py
src/fireset/ldap.asn1/private/: mycodec_der.py  osspy_der.py
src/fireset/ldap_asn1/: bindings.py  ldap.asn  mycodec.py
src/fireset/ldap_asn1/private/: mycodec_der.py  osspy_bindings.py  ossvalidate.py
src/fireset/rights/: __init__.py  authenticated.py  from_file.py  owner_only.py  owner_write.py
src/fireset/storage/: __init__.py  multifilesystem_nolock.py
src/fireset/storage/multifilesystem/: __init__.py  base.py  cache.py  create_collection.py  delete.py  discover.py  get.py  history.py  lock.py  meta.py  move.py  sync.py  upload.py  verify.py
src/fireset/tests/: BaseTest.py  __init__.py  helpers.py  test_config.py  test_server.py  test_web.py
src/fireset/tests/custom/: auth.py  rights.py  storage_simple_sync.py  web.py
src/fireset/web/: __init__.py  internal.py  none.py
tests/: Example.vcf  coverage.conf  test_api.py  test_asn1.py  test_auth.py  test_base.py  test_caldav.py  test_carddav.py  test_client.py  test_config.py  test_database.py  test_db.py  test_extension.py  test_icalendar.py  test_ldap_client.py  test_ldapclient.py  test_main.py  test_pushover.py  test_rights.py  test_run.py  test_server.py  test_storage.py  test_store.py  test_vcard.py  test_web.py  test_webdav.py  test_wsgi.py
xandikos/: __init__.py  access.py  caldav.py  icalendar.py  web.py  webdav.py  wsgi.py
xandikos/store/: __init__.py  git.py  index.py  vdir.py
xandikos/tests/: test_webdav.py
