[build-system]
requires = [
    "pdm-backend>=2.1.0,<3.0.0",
    "setuptools>=67.0.0,<69.0.0",
    "wheel",
    "toml"
]
build-backend = "pdm.backend"

[project]
name = "fireset"
dynamic = ["version"]
description = "CalDAV and CardDAV Server"
authors = [
    {name = "Yann de The", email = "ydethe@gmail.com"},
    {name = "Guillaume Ayoub", email = "guillaume.ayoub@kozea.fr"},
]
dependencies = [
    "defusedxml",
    "passlib",
    "pika>=1.1.0",
    "python-dateutil>=2.7.3",
    "vobject>=0.9.6",
    "bcrypt>=4.2.0",
]
requires-python = ">=3.8.0"
readme = "README.md"
license = {text = "GNU GPL v3"}
keywords = [
    "calendar",
    "addressbook",
    "CalDAV",
    "CardDAV",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Office/Business :: Groupware",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.options]
add = ["--save-compatible"]

[tool.pdm.build]
excludes = [
    ".gitignore",
    "pdm_build.py",
    "tests",
    "examples",
    "build",
    "dev",
    "dist",
    "mockup",
    "ksy"
]
editable-backend = "editables"

[project.urls]
Homepage = "https://radicale.org/"

[tool.pdm.dev-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "ipython~=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
    "httpx~=0.27",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3~=0.10.0",
    "genbadge[all]>=1.1.1,<2.0.0",
    "docstr-coverage>=2.2.0",
    "pdm_template>=0.1.8",
]
test = [
    "pytest~=7.1.3",
    "pytest-cov~=3.0.0",
    "pytest-mock~=3.8.2",
    "pytest-instafail~=0.4.2",
    "pytest-picked~=0.4.6",
    "pytest-sugar~=0.9.5",
    "pytest-html~=3.1.1",

]

[tool.pdm.scripts]
site_packages = true
doc.shell = """\
    mkdir -p htmldoc/fireset
    pdoc --html --force --config latex_math=True -o htmldoc fireset
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    coverage xml -o htmldoc/coverage/coverage.xml --rcfile tests/coverage.conf
    docstr-coverage src/fireset -miP -sp -is -idel --skip-file-doc --badge=htmldoc/fireset/doc_badge.svg
    genbadge coverage -l -i htmldoc/coverage/coverage.xml -o htmldoc/fireset/cov_badge.svg
    fix-doc
"""
serve = "python3 -m http.server 10124 -d htmldoc"

[project.scripts]
radicale = "radicale.__main__:run"

