[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "fireset"
dynamic = ["version"]
description = "A cardDAV server that uses any backend to store the contacts' information"
authors = [
    { name = "Yann de Thé", email = "ydethe@gmail.com" },
]
# sudo apt install libpq5
dependencies = [
    "ldaptor>=21.2.0",
    "sqlalchemy>=2.0.37",
    "twisted>=24.11.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/fireset/issues"
Homepage = "https://github.com/ydethe/fireset"
Source = "https://github.com/ydethe/fireset"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=fireset",
    "--doctest-modules",
    "--hypothesis-show-statistics",

]
testpaths = [
    "tests/",
]

[tool.uv]
resolution = "highest"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/fireset"]

excludes = [
    ".gitignore",
    "tests",
    "build",
    "dist",
]
editable-backend = "editables"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "ipython~=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
    "httpx~=0.27",
    "vulture~=2.13",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3~=0.10.0",
    "genbadge[all]>=1.1.1,<2.0.0",
    "docstr-coverage>=2.2.0",
]
test = [
    "pytest~=7.1.3",
    "pytest-cov~=3.0.0",
    "pytest-mock~=3.8.2",
    "pytest-instafail~=0.4.2",
    "pytest-picked~=0.4.6",
    "pytest-sugar~=0.9.5",
    "pytest-html~=3.1.1",
    "pytest-aiohttp~=1.0",
    "hypothesis~=6.115",
]

[tool.pdm.scripts]
doc.shell = """\
    mkdir -p htmldoc/fireset
    pdoc --html --force --config latex_math=True -o htmldoc fireset
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    coverage xml -o htmldoc/coverage/coverage.xml --rcfile tests/coverage.conf
    docstr-coverage src/fireset -miP -sp -is -idel --skip-file-doc --badge=htmldoc/fireset/doc_badge.svg
    genbadge coverage -l -i htmldoc/coverage/coverage.xml -o htmldoc/fireset/cov_badge.svg
"""
